applications/prd/we-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: we-api-prd
  labels:
    app: we-api
    environment: production
    project: wefood
