applications/prd/we-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: we-api
  namespace: we-api-prd
  labels:
    app: we-api
    version: v3.22.4
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: we-api
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "3000"
        prometheus.io/scrape: "true"
      labels:
        app: we-api
        version: v3.22.4
    spec:
      imagePullSecrets:
      - name: ghcr-pull-secret
      volumes:
      - name: keyvault-env
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: we-api-keyvault-env
      - name: tokens
        secret:
          secretName: we-api-tokens
      - name: all-certs
        projected:
          sources:
          - secret:
              name: we-api-firebase-certs
              items:
              - key: menugrsa.json
                path: firebase/menugrsa.json
              - key: deli-2f288.json
                path: firebase/deli-2f288.json
              - key: sodexo-54882.json
                path: firebase/sodexo-54882.json
          - secret:
              name: we-api-certs
              items:
              - key: ticket-public-cert.cer
                path: ticket-public-cert.cer
              - key: ticket-public-cert.cer
                path: edenred/partner-lab-wedigitek.edenred.net_2022.cer
              - key: AuthKey_9984Z5GVCJ.p8
                path: AuthKey_9984Z5GVCJ.p8
          - secret:
              name: we-api-tokens
              items:
              - key: jwtRS256.key
                path: jwtRS256.key
              - key: jwtRS256.key.pub
                path: jwtRS256.key.pub
      - name: apikeys
        secret:
          secretName: we-api-apikeys
      containers:
      - name: we-api
        image: ghcr.io/wedigitek/we-api:rc
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: keyvault-env
          mountPath: /mnt/keyvault-env
          readOnly: true
        - name: tokens
          mountPath: /we-api/tokens
          readOnly: true
        - name: tokens
          mountPath: /tokens
          readOnly: true
        - name: all-certs
          mountPath: /we-api/certs
          readOnly: true
        - name: all-certs
          mountPath: /certs
          readOnly: true
        - name: apikeys
          mountPath: /we-api/apiKeys
          readOnly: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1"
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 15
