applications/prd/we-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: we-api
  namespace: we-api-prd
  labels:
    app: we-api
spec:
  type: ClusterIP
  selector:
    app: we-api
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  sessionAffinity: None
