applications/prd/we-api/mongodb-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: we-api-aks-mongo-isolation
  namespace: we-api-prd
spec:
  podSelector:
    matchLabels:
      app: we-api-aks-mongo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: we-api
        - podSelector:
            matchLabels:
              app: we-api-mongo-sync
      ports:
        - protocol: TCP
          port: 27017
